--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-REACT_APP_API_BASE_URL=http://localhost:5173
+VITE_GOOGLE_CLIENT_ID=74283811511-2k18p05s3hu0109mjlno3sss05eainp0.apps.googleusercontent.com
+VITE_API_BASE_URL=http://localhost:5173
